--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <center><h1>Lunch Menu JS test</h1></center>
 <!--backup
   <script src="https://cdn.rawgit.com/Hkam-RHS/Hkam-RHS.github.io/master/lunch.js"></script>
-
+  <div>
+    <p>webdev good</p>
+  </div>
   <script type="text/javascript" src="http://howardkam.com/lunch.js"></script>-->
 
 <script type="text/javascript" src="http://howardkam.com/lunch.js"></script>
