Added files via upload

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 
   <script type="text/javascript" src="http://howardkam.com/lunch.js"></script>-->
 
-<script type="text/javascript" src="http://howardkam.com/lunch.js"></script>
+<script type="text/javascript" src="lunch.js"></script>
 
-<p id="demo"></p>
+Today is: <span id="showTheDayName"></span>
+<br>
+The lunch for today is: <span id="showTheLunch"></span>
 <script>
     lunchDay();
 </script>
