Made clickable div

--- a/index.html
+++ b/index.html
@@ -18,14 +18,11 @@
 
 <br>
 
-<div class="dragscroll">
-  <div>
-    <img src='food.jpg'>
-  </div>
-  <div>
-    <img src='schedule.jpg'>
-  </div>
+<div class="clickable">
+    <a href="lunch.html"> </a>
+    Rest of div content goes here
 </div>
+
 
 </body>
 </html>
