--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div class="clickable">
     <a href="lunch.html"> </a>
-    Rest of div content goes here
+    <span class='menuLabel'>LUNCH</span>
 </div>
 
 
