--- a/lunch.html
+++ b/lunch.html
@@ -1,5 +1,5 @@
 <html>
-<head><<link rel="stylesheet" type="text/css" href="MasterStyle.css"></head>
+<head><link rel="stylesheet" type="text/css" href="MasterStyle.css"></head>
 <body>
 <script type="text/javascript" src="lunch.js"></script>
 <table border='0' width='100%'>
