--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <html>
-  <head><link rel="stylesheet" type="text/css" href="MasterStyle.css"></head>
+<head><link rel="stylesheet" type="text/css" href="MasterStyle.css"></head>
 <body>
-
-<!--backup
-  <script src="https://cdn.rawgit.com/Hkam-RHS/Hkam-RHS.github.io/master/lunch.js"></script>
-
-  <script type="text/javascript" src="http://howardkam.com/lunch.js"></script>-->
-
-<!--Begin main code-->
-<script type="text/javascript" src="dragscroll.js"></script>
-
+<script type="text/javascript" src="lunch.js"></script>
 <table border='0' width='100%'>
   <tr>
     <td align='left'><img src='logo.png' height='50px'></td>
+    <td align='right'>
+      <a href='index.html'><img src='menu.png' height='50px'></a>
+    </td>
   </tr>
 </table>
-
-<br>
-
-<div class="clickable">
-    <a href="lunch.html"> </a>
-    <span class='menuLabel'>LUNCH</span>
+<div class="box">
+<div id="stay-in-place">
+	<span class='menuLabel'>LUNCH</span>
 </div>
 
+<div id="move-in-to-place">
+	<span class='normal'>Today is: </span> <span id="showTheDayName"></span>
+	<br>
+	<span class='normal'>The lunch for today is: </span> <span id="showTheLunch"></span>
+</div>
+</div>
 
+<script>
+    lunchDay();
+</script>
 </body>
-</html>
