--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><link rel="stylesheet" type="text/css" href="MasterStyle.css"></head>
 <body>
-<script type="text/javascript" src="lunch.js"></script>
+<script type="text/javascript" src="http://howardkam.com/lunch.js"></script>
 <table border='0' width='100%'>
   <tr>
     <td align='left'><img src='logo.png' height='50px'></td>
