Added files via upload

--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
 </div>
 <!--DIV boxes for the Schedule. END-->
 
+<!--DIV boxes for the GpaCalc. START-->
+<div class="box">
+  <div id="stay-in-place-GpaCalc">
+   <span class='menuLabel'>Gpa Calculator<br><span class='subMenuLabel'>Tap to show</span></span>
+  </div>
+
+  <div id="move-in-to-place">
+  <span class='normal'>Awaiting content from Robert Lac </span>
+  <br>
+  <span id='showSchedule'></span>
+  </div>
+</div>
+<!--DIV boxes for the GpaCalc. END-->
 
 <script>
     lunchDay();
