Added files via upload

--- a/index.html
+++ b/index.html
@@ -40,17 +40,11 @@
 <!--DIV boxes for the Schedule. END-->
 
 <!--DIV boxes for the GpaCalc. START-->
-<div class="box">
-  <div id="stay-in-place-GpaCalc">
-   <span class='menuLabel'>Gpa Calculator<br><span class='subMenuLabel'>Tap to show</span></span>
-  </div>
-
-  <div id="move-in-to-place">
-  <span class='normal'>Awaiting content from Robert Lac </span>
-  <br>
-  <span id='showSchedule'></span>
-  </div>
+<a href='gpacalc.html'>
+<div class="clickable">
+  <span class='menuLabel'>GPA Calculator</span>
 </div>
+</a>
 <!--DIV boxes for the GpaCalc. END-->
 
 <script>
