--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
 <body>
 <script type="text/javascript" src="http://howardkam.com/lunch.js"></script>
 <script type="text/javascript" src="http://howardkam.com/schedule.js"></script>
-<table border='0' width='100%'>
-  <tr>
-    <td align='left'><img src='logo.png' height='50px'></td>
-    <td align='right'>
-      <!--<a href='index.html'><img src='menu.png' height='50px'></a>-->
-    </td>
-  </tr>
-</table>
+
 <!--DIV boxes for the Lunch. START-->
 <div class="box">
   <div id="stay-in-place">
-	 <span class='menuLabel'>LUNCH<br><span class='subMenuLabel'>Tap to show</span></span>
+	 <span class='menuLabel'>Lunch<br><span class='subMenuLabel'>Tap to show</span></span>
   </div>
 
   <div id="move-in-to-place">
@@ -39,14 +32,27 @@
 </div>
 <!--DIV boxes for the Schedule. END-->
 
-<!--DIV boxes for the GpaCalc. START-->
-<a href='gpacalc.html'>
-<div class="clickable">
-  <span class='menuLabel'>GPA Calculator</span>
-</div>
-</a>
-<!--DIV boxes for the GpaCalc. END-->
+<div><!--REQUIRED for option1 and option2 div-->
 
+ <!--DIV boxes for the Option 1. START-->
+
+<a href='gpacalc.html'>
+  <div class='option1'>
+    GPA Calc<br>
+    <span class='subMenuLabel'>Tap to show</span>
+  </div>
+</a>
+<!--DIV boxes for the Option 1. END-->
+<!--DIV boxes for the Option 1. START-->
+
+<a href='help.html'>
+  <div class='option2'>
+    Help<br>
+    <span class='subMenuLabel'>Tap to show</span>
+  </div>
+</a>
+<!--DIV boxes for the Option 1. END-->
+</div>
 <script>
     lunchDay();
 </script>
