Added parents section

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 <!--DIV boxes for the Option 1. END-->
 <!--DIV boxes for the Option 1. START-->
 
-<a href='help.html'>
+<a href='parents.html'>
   <div class='option2'>
-    Help<br>
+    Parents<br>
     <span class='subMenuLabel'>Tap to show</span>
   </div>
 </a>
