--- a/parents.html
+++ b/parents.html
@@ -1,7 +1,7 @@
 <html>
 <head><link rel="stylesheet" type="text/css" href="MasterStyle.css"></head>
 <body>
-
+<script type="text/javascript" src="http://howardkam.com/parents.js"></script>
 <table border='0' width='100%'>
   <tr>
     <td align='left'><a href='index.html'><img src='logo.png' height='50px'></a></td>
@@ -11,8 +11,9 @@
   </tr>
 </table>
 <!--Begin content-->
-<span class='normal'>Waiting for Robert Lac's code</span>
+<span class='normal'>This section will be populated by a JavaScript file on my server. If you can read it, then the JS file works.</span>
+<span id='showParentsNews'></span>
 
-
+<script>forParents();</script>
 </body>
 </html>
