--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
 
 <table border='0' width='100%'>
   <tr>
-    <td align='left'><img src='logo.png' height='50px'></td>
+    <td align='left'><a href='index.html'><img src='logo.png' height='50px'></a></td>
     <td align='right'>
 
     </td>
