--- a/parents.html
+++ b/parents.html
@@ -11,8 +11,10 @@
   </tr>
 </table>
 <!--Begin content-->
-<span class='normal'>This section will be populated by a JavaScript file on my server. If you can read it, then the JS file works.</span>
-<span id='showParentsNews'></span>
+<div id='showParentsDiv'>
+	<span class='title'>News for Parents</span>
+	<span id='showParentsNews'></span>
+</div>
 
 <script>forParents();</script>
 </body>
