--- a/parents.html
+++ b/parents.html
@@ -13,9 +13,10 @@
 <!--Begin content-->
 <div id='showParentsDiv'>
 	<span class='title'>News for Parents</span>
-	<span id='showParentsNews'></span>
+	<br>
+	<iframe src="https://docs.google.com/document/d/1D0V2eloilLl_otkMaTofrf5UIbEC2o0G7GdZ0PpoENc/pub?embedded=true" border='0' width='99%' height='60%'></iframe></span>
 </div>
 
-<script>forParents();</script>
+<!--<script>forParents();</script>-->
 </body>
 </html>
