Added files via upload

--- a/parents.html
+++ b/parents.html
@@ -14,9 +14,9 @@
 <div id='showParentsDiv'>
 	<span class='title'>News for Parents</span>
 	<br>
-	<iframe src="https://docs.google.com/document/d/1D0V2eloilLl_otkMaTofrf5UIbEC2o0G7GdZ0PpoENc/pub?embedded=true" border='0' width='99%' height='60%'></iframe></span>
+	<iframe src="https://docs.google.com/document/d/1D0V2eloilLl_otkMaTofrf5UIbEC2o0G7GdZ0PpoENc/pub?embedded=true" border='0' width='99%' height='60%'></iframe>
 </div>
 
-<!--<script>forParents();</script>-->
+
 </body>
 </html>
