Added files via upload

--- a/parents.html
+++ b/parents.html
@@ -1,7 +1,7 @@
 <html>
 <head><link rel="stylesheet" type="text/css" href="MasterStyle.css"></head>
 <body>
-
+<script src='http://howardkam.com/parents.js'></script>
 <table border='0' width='100%'>
   <tr>
     <td align='left'><a href='index.html'><img src='logo.png' height='50px'></a></td>
@@ -14,9 +14,10 @@
 <div id='showParentsDiv'>
 	<span class='title'>News for Parents</span>
 	<br>
-	<iframe src="https://docs.google.com/document/d/1D0V2eloilLl_otkMaTofrf5UIbEC2o0G7GdZ0PpoENc/pub?embedded=true" border='0' width='99%' height='60%'></iframe>
+	<span id='showParentsNews'></span>
+	<!--<iframe src="https://docs.google.com/document/d/1D0V2eloilLl_otkMaTofrf5UIbEC2o0G7GdZ0PpoENc/pub?embedded=true" border='0' width='99%' height='60%'></iframe>-->
 </div>
 
-
+<script>forParents();</script>
 </body>
 </html>
