Testing push notifications with pushbot

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <script type="text/javascript" src="http://howardkam.com/lunch.js"></script>
 <script type="text/javascript" src="http://howardkam.com/schedule.js"></script>
-
+<script type="text/javascript" src="index.js"></script>
 <!--DIV boxes for the Lunch. START-->
 <div class="box">
   <div id="stay-in-place">
