--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 	 <span class='normal'>Today is: </span> <span id="showTheDayName"></span>
 	 <br>
 	 <br><span id="showTheLunch"></span>
+	 <span class='normal'>Next Day is: </span> <span id="showTheNextDayName"></span>
+	 <br>
+	 <br><span id="showTheNextLunch"></span>
   </div>
 </div>
 <!--DIV boxes for the Lunch. END-->
